--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,15 @@
 .table-data {
   padding: 30px;
 }
-
+p.login_here {
+  color: #fff;
+  margin-top: 10px;
+  text-align: center;
+  margin-bottom: 0px;
+}
+p.login_here a {
+  color: #a4b9ce;
+}
 
 
 ::placeholder { 
